# screen-machine

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: img.rs  main.rs
bot/: bot.py
