[package]
name = "backend"
version = "0.1.0"
authors = ["EdoardoLaGreca <lagrecaedoardo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.18"
image = "0.23.10"
rayon = "1.4.0"
png = "0.16.7"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"

[target.'cfg(unix)'.dependencies]
screenshot-rs = "0.1.5" # Requires `scrot`
